<resources>
    <string name="app_name">TerrasSteel</string>

    <!-- General -->
    <string name="cancel">Annuler</string>
    <string name="version">Version : %1$s </string>
    <string name="no_internet_title">Aucune connexion</string>
    <string name="no_internet_message">Votre appareil n\'est pas connecté à internet</string>
    <string name="tab_construction">Mes chantiers</string>
    <string name="tab_company">Mon entreprise</string>
    <string name="construction_status_inprogress">En cours</string>
    <string name="construction_status_finished">Terminé</string>
    <string name="add_construction_title">Ajouter un chantier</string>
    <string name="hint_construction_name">Nom du chantier</string>
    <string name="hint_customer">Client</string>
    <string name="hint_address1">Adresse 1</string>
    <string name="hint_address2">Adresse 2</string>
    <string name="hint_zip">Code postal</string>
    <string name="hint_city">Ville</string>
    <string name="validate">Valider</string>
    <string name="customer_management">Gestion des clients</string>
    <string name="employee_management">Gestion des employés</string>
    <string name="my_customers">Mes clients</string>
    <string name="my_employees">Mes employés</string>
    <string name="add_customer_title">Ajouter un client</string>
    <string name="hint_phone">Téléphone</string>
    <string name="hint_email">Email</string>
    <string name="hint_customer_name">Nom du client</string>
    <string name="construction_manager">Chef de chantier</string>
    <string name="poseur">Poseur</string>
    <string name="commercial">Commercial</string>
    <string name="add_employee_title">Ajouter un employé</string>
    <string name="hint_employee_name">Nom de l\'employé</string>
    <string name="hint_employee_job">Type d\'emploi</string>
    <string name="select_job_title">Sélectionnez un type d\'emploi</string>
    <string name="select_customer_title">Selectionnez un client</string>
    <string name="standard_mandatory_field_message">Ce champ est obligatoire</string>
    <string name="customer_mandatory_field_message">La sélection d\'un client est obligatoire</string>
    <string name="empty_construction_text">Vous n\'avez pas encore ajouté de chantier.</string>
    <string name="add_construction_textbutton">Ajouter un chantier</string>
    <string name="add_employee_textbutton">Ajouter un employé</string>
    <string name="empty_employee_text">Vous n\'avez pas encore ajouté d\'employé.</string>
    <string name="empty_customer_text">Vous n\'avez pas encore ajouté de client.</string>
    <string name="add_customer_textbutton">Ajouter un client</string>
    <string name="edit_customer_title">Edition d\'un client</string>
    <string name="edit_employee_title">Edition d\'un employé</string>
    <string name="imputation_time_menu">Pointage</string>
    <string name="work_order_menu">Bons de travail</string>
    <string name="dashboard_menu">Tableau de bord</string>
    <string name="point_time_title">Pointage</string>
    <string name="empty_active_working_order_text">Vous n\'avez aucun bon de travail ouvert actuellement pour ce chantier.</string>
    <string name="empty_working_order_text">Vous n\'avez pas encore créé de bon de travail pour ce chantier.</string>
    <string name="add_working_order_textbutton">Ajouter un bon de travail</string>
    <string name="add_workorder_title">Ajouter un bon de travail</string>
    <string name="workorder_reference_hint">N° pointage</string>
    <string name="hint_workorder_affaire">Référence affaire</string>
    <string name="hint_workorder_producttype">Type de produit</string>
    <string name="hint_workorder_hours">Nombre d\'heure</string>
    <string name="workorder_status_inprogress">En cours</string>
    <string name="workorder_status_finished">Terminé</string>
    <string name="available_employee_title">Employés disponibles</string>
    <string name="assigned_employee_title">Employés assignés</string>
    <string name="empty_assigned_text">Aucun employé n\'est assigné à ce bon de travail actuellement.</string>
    <string name="empty_available_text">Aucun employé disponible actuellement.</string>
    <string name="show_assign">Voir les affectations</string>
    <string name="show_imputation">Voir les imputations</string>
    <string name="close_workorder_textbutton">Fermer le bon de travail</string>
    <string name="consumed_time">Consommé</string>
    <string name="affected_time">Alloué</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="workorder_close_confirmation_message">Souhaitez-vous fermer ce bon de travail ?</string>
    <string name="status">Status</string>
    <string name="unavailable">Indisponible</string>
    <string name="empty_imputation">Aucune imputation n\'est enregistrée pour ce bon de travail.</string>
    <string name="work_order">Bon de travail N°%1$s </string>
    <string name="qr_wo_notrecognized">Le QR code du Bon de travail n\'a pas été reconnu.</string>
    <string name="qr_construction_notrecognized">Le QR code chantier n\'à pas été reconnu.</string>
    <string name="hint_employee_code">Code employé</string>
    <string name="manual_mode">Saisie Manuelle</string>
    <string name="export_file_generated">Fichier d\'export généré avec succès.</string>
    <string name="export_file_generation_fail">Une erreur est survenu durant la génération du fichier d\'export.</string>
    <string name="dashboard_not_available">Le tableau de bord n\'est pas disponible pour le moment.</string>
    <string name="tab_order">Mes commandes</string>
    <string name="add_order_textbutton">Ajouter une commande</string>
    <string name="empty_order_text">Vous n\'avez pas encore ajouté de commande.</string>
    <string name="qr_order_notrecognized">Le QR code du de la Commande n\'à pas été reconnu.</string>
    <string name="add_order_title">Ajouter une commande</string>
    <string name="hint_ordercode_name">Code de commande</string>
    <string name="add_picture_textbutton">Ajouter une photo</string>
    <string name="empty_picture_text">Aucune photo n\'a été enregistrée pour cette commande pour le moment.</string>
    <string name="order_close_confirmation_message">Etes-vous sûr de vouloir clôturer cette commande.</string>
    <string name="retake">Recommencer</string>
    <string name="delete_picture_confirmation_message">Souhaitez-vous vraiment supprimer cette photo ?</string>
    <string name="filterHint">Filtrer vos commandes</string>
    <string name="all">Toutes</string>
    <string name="in_progress">En cours</string>

</resources>
