<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_imputation_time"
        android:enabled="true"
        android:icon="@drawable/ic_timer"
        android:title="@string/imputation_time_menu"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_work_order"
        android:enabled="true"
        android:icon="@drawable/ic_ticket"
        android:title="@string/work_order_menu"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_dashboard"
        android:enabled="true"
        android:icon="@drawable/ic_dashboard"
        android:iconTint="@color/light_grey"
        android:title="@string/dashboard_menu"
        app:showAsAction="ifRoom" />
</menu>