<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.vtec.terrassteel.common.ui.ActionBar
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:showBackArrow="true"
        app:title="@string/add_order_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ordercode_name_til"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard"
        android:layout_marginTop="@dimen/xlarge"
        android:layout_marginEnd="@dimen/standard">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ordercode_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_ordercode_name"
            android:imeOptions="actionNext"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <com.vtec.terrassteel.common.ui.FontButton
        android:id="@+id/validate_button"
        style="@style/FullButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_marginBottom="@dimen/xxlarge"
        android:layout_gravity="center_horizontal"
        android:text="@string/validate"/>

</LinearLayout>