<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.vtec.terrassteel.common.ui.ActionBar
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:showBackArrow="true"
        app:title="@string/add_employee_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/employee_name_til"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standard"
                android:layout_marginTop="@dimen/xlarge"
                android:layout_marginEnd="@dimen/standard">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/employee_name_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_employee_name"
                    android:imeOptions="actionNext"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/employee_job_til"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standard"
                android:layout_marginTop="@dimen/xlarge"
                android:layout_marginEnd="@dimen/standard">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/employee_job_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_employee_job"
                    android:imeOptions="actionNext"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/employee_code_til"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standard"
                android:layout_marginTop="@dimen/xlarge"
                android:layout_marginEnd="@dimen/standard">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/employee_code_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_employee_code"
                    android:imeOptions="actionNext"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/employee_address1_textinputlayout"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standard"
                android:layout_marginTop="@dimen/standard"
                android:layout_marginEnd="@dimen/standard">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/employee_address1_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_address1"
                    android:imeOptions="actionNext"
                    android:inputType="textPostalAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/employee_address2_textinputlayout"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standard"
                android:layout_marginTop="@dimen/standard"
                android:layout_marginEnd="@dimen/standard">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/employee_address2_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_address2"
                    android:imeOptions="actionNext"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/standard"
                android:baselineAligned="false">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/employee_zip_textinputlayout"
                    style="@style/TextInputLayout"
                    android:layout_width="135dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/standard">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/employee_zip_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_zip"
                        android:maxLength="5"
                        android:imeOptions="actionNext"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/employee_city_textinputlayout"
                    style="@style/TextInputLayout"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/standard"
                    android:layout_marginEnd="@dimen/standard">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/employee_city_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_city"
                        android:imeOptions="actionNext"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/employee_phone_textinputlayout"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standard"
                android:layout_marginTop="@dimen/standard"
                android:layout_marginEnd="@dimen/standard">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/employee_phone_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_phone"
                    android:maxLength="10"
                    android:imeOptions="actionNext"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/employee_email_textinputlayout"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standard"
                android:layout_marginTop="@dimen/standard"
                android:layout_marginEnd="@dimen/standard">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/employee_email_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <com.vtec.terrassteel.common.ui.FontButton
                android:id="@+id/validate_button"
                style="@style/FullButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/xlarge"
                android:layout_marginBottom="@dimen/xxlarge"
                android:layout_gravity="center_horizontal"
                android:text="@string/validate"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>